# yggdrasil

./: .env  .env.example  .gitignore  0qjlhnvgut0klikof7nmr3kieofusjdo  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  docker-compose.yml  install  manifest  release-plz.toml
.beads/: metadata.json
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
docs/: design-principles.md  eval-benchmarks.md  llm-usage.md  multi-user.md  open-questions.md  orchestration.md  references.md  retrieval.md
migrations/: 20260415000001_initial.sql  20260416000002_events.sql  20260416000003_embedding_event.sql  20260417000004_repos_sessions_tasks.sql  20260417000005_task_events.sql  20260418000001_embedding_cache.sql  20260418000002_cache_hit_event.sql  20260418000003_classifier_event.sql  20260418000004_scoring_event.sql  20260418000005_session_summaries.sql  20260418000006_redaction_event.sql  20260418000007_hit_referenced_event.sql  20260418000008_content_tsv.sql  20260418000009_agent_state_event.sql  20260418000010_content_tsv_trigger.sql  20260418000011_events_cc_session.sql  20260418000012_memories.sql  20260418000013_session_state.sql  20260418000014_task_relevance.sql  20260418000015_agents_archive.sql  20260418000016_agents_persona.sql  20260418000017_workers.sql  20260418000018_worker_delivery.sql  20260419000001_task_external_ref.sql  20260419000002_task_embedding.sql  20260419000003_learnings.sql  20260420000001_messages.sql  20260424000001_run_enums_and_task_runs.sql  20260424000002_tasks_exec_columns.sql  20260424000004_bench_tables.sql  (+19 more)
(+214 files in other folders)
